--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,9 @@ default_stages: [
 ]
 ci:
     autofix_prs: false
+    autoupdate_schedule: monthly
+    # manual stage hooks
+    skip: [pylint, pyright, mypy, autotyping]
 repos:
 -   repo: https://github.com/hauntsaninja/black-pre-commit-mirror
     # black compiled with mypyc
@@ -136,7 +139,7 @@ repos:
         stages: [manual]
         additional_dependencies: &pyright_dependencies
         - pyright@1.1.296
-    -   id: pyright_reportGeneralTypeIssues
+    -   id: pyright
         # note: assumes python env is setup and activated
         name: pyright reportGeneralTypeIssues
         entry: pyright --skipunannotated -p pyright_reportGeneralTypeIssues.json --level warning
@@ -153,7 +156,7 @@ repos:
         pass_filenames: false
         types: [python]
         stages: [manual]
-    -   id: stubtest
+    -   id: mypy
         # note: assumes python env is setup and activated
         # note: requires pandas dev to be installed
         name: mypy (stubtest)
