--- a/.gitattributes
+++ b/.gitattributes
@@ -61,6 +61,8 @@ pandas/_version.py export-subst
 *.pxi export-ignore
 
 # Ignoring stuff from the top level
+.circleci export-ignore
+.github export-ignore
 asv_bench export-ignore
 ci export-ignore
 doc export-ignore
