--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -103,11 +103,24 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download sdist
-        uses: actions/download-artifact@v3
-        with:
-          name: sdist
-          path: ./dist
+      # - name: Download sdist
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: sdist
+      #     path: ./dist
+
+      # We need to build wheels from the sdist since the sdist
+      # removes unnecessary files from the release
+
+      - name: Build sdist
+        run: |
+          python -m pip install build
+          python -m build --sdist
+
+      - name: Output sdist name
+        id: save-sdist-path
+        shell: bash -el {0}
+        run: echo "sdist_name=$(ls ./dist)" >> "$GITHUB_ENV"
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.13.1
@@ -116,6 +129,8 @@ jobs:
         # within Github that makes the sdist be missing files
         #with:
         #  package-dir: ./dist/${{ needs.build_sdist.outputs.sdist_file }}
+        with:
+          package-dir: ./dist/${{ env.sdist_name }}
         env:
           CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
 
