--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -146,7 +146,7 @@ jobs:
           $TST_CMD = @"
           python -m pip install pytz six numpy python-dateutil tzdata>=2022.1 hypothesis>=6.46.1 pytest>=7.3.2 pytest-xdist>=2.2.0 pytest-asyncio>=0.17;
           python -m pip install --find-links=pandas\wheelhouse --no-index pandas;
-          python -c `'import pandas as pd; pd.test(extra_args=[\"--no-strict-data-files\"])`';
+          python -c `'import pandas as pd; pd.test(extra_args=["--no-strict-data-files"])`';
           "@
           docker pull python:${{ matrix.python[1] }}-windowsservercore
           docker run --env PANDAS_CI='1' -v ${PWD}:C:\pandas python:${{ matrix.python[1] }}-windowsservercore powershell -Command $TST_CMD
