--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -104,6 +104,8 @@ jobs:
         with:
           fetch-depth: 0
 
+      # We need to build wheels from the sdist since the sdist
+      # removes unnecessary files from the release
       - name: Download sdist
         uses: actions/download-artifact@v3
         with:
@@ -115,8 +117,8 @@ jobs:
         # TODO: Build wheels from sdist again
         # There's some sort of weird race condition?
         # within Github that makes the sdist be missing files
-        #with:
-        #  package-dir: ./dist/${{ needs.build_sdist.outputs.sdist_file }}
+        with:
+         package-dir: ./dist/${{ needs.build_sdist.outputs.sdist_file }}
         env:
           CIBW_PRERELEASE_PYTHONS: True
           CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
@@ -144,7 +146,7 @@ jobs:
           $TST_CMD = @"
           python -m pip install pytz six numpy python-dateutil tzdata>=2022.1 hypothesis>=6.46.1 pytest>=7.3.2 pytest-xdist>=2.2.0 pytest-asyncio>=0.17;
           python -m pip install --find-links=pandas\wheelhouse --no-index pandas;
-          python -c `'import pandas as pd; pd.test()`';
+          python -c `'import pandas as pd; pd.test(extra_args=[\"`\"--no-strict-data-files`\"\", \"`\"-m not clipboard and not single_cpu and not slow and not network and not db`\"\"])`';
           "@
           docker pull python:${{ matrix.python[1] }}-windowsservercore
           docker run --env PANDAS_CI='1' -v ${PWD}:C:\pandas python:${{ matrix.python[1] }}-windowsservercore powershell -Command $TST_CMD
