--- a/pyproject.toml
+++ b/pyproject.toml
@@ -502,7 +502,7 @@ filterwarnings = [
   "ignore:distutils Version classes are deprecated:DeprecationWarning:numexpr",
   "ignore:distutils Version classes are deprecated:DeprecationWarning:fastparquet",
   "ignore:distutils Version classes are deprecated:DeprecationWarning:fsspec",
-  "ignore::EncodingWarning:parso",
+  "ignore:.*argument not specified::parso",
 ]
 junit_family = "xunit2"
 markers = [
