--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,8 +14,8 @@ name: Wheel builder
 
 on:
   schedule:
-  # 5:35 UTC every day
-  - cron: "40 5 * * *"
+  # :40 every hour
+  - cron: "40 * * * *"
   push:
   pull_request:
     types: [labeled, opened, synchronize, reopened]
