--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,8 +14,8 @@ name: Wheel builder
 
 on:
   schedule:
-  # Every 15 minutes
-  - cron: "*/15 * * * *"
+  # 8:27 UTC every day
+  - cron: "27 8 * * *"
   push:
   pull_request:
     types: [labeled, opened, synchronize, reopened]
