revert modifications to nanoarrow

--- a/pandas/_libs/meson.build
+++ b/pandas/_libs/meson.build
@@ -62,7 +62,7 @@ libs_sources = {
     # Dict of extension name -> dict of {sources, include_dirs, and deps}
     # numpy include dir is implicitly included
     'algos': {'sources': ['algos.pyx', _algos_common_helper, _algos_take_helper, _khash_primitive_helper]},
-    'arrays': {'sources': ['arrays.pyx', 'src/vendored/nanoarrow.c']},
+    'arrays': {'sources': ['arrays.pyx', 'src/vendored/nanoarrow.c'], 'includes': ['include/pandas/vendored']},
     'groupby': {'sources': ['groupby.pyx']},
     'hashing': {'sources': ['hashing.pyx']},
     'hashtable': {'sources': ['hashtable.pyx', _khash_primitive_helper, _hashtable_class_helper, _hashtable_func_helper]},
@@ -106,7 +106,7 @@ foreach ext_name, ext_dict : libs_sources
         ext_name,
         ext_dict.get('sources'),
         cython_args: ['--include-dir', meson.current_build_dir(), '-X always_allow_keywords=true'],
-        include_directories: [inc_np, inc_pd],
+        include_directories: [inc_np, inc_pd] + ext_dict.get('includes', []),
         dependencies: ext_dict.get('deps', ''),
         subdir: 'pandas/_libs',
         install: true
