--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
       - run:
           name: Build aarch64 wheels
           command: |
+            export PYTHONUNBUFFERED=1 # so we can see prints in real-time and so circleci won't kill the build due to not seeing output
             pip3 install cibuildwheel==2.14.1
             cibuildwheel --prerelease-pythons --output-dir wheelhouse
           environment:
