--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,8 @@ jobs:
             fi
       - run:
           name: Build aarch64 wheels
+          no_output_timeout: 30m # Sometimes the tests won't generate any output, make sure the job doesn't get killed by that
           command: |
-            export PYTHONUNBUFFERED=1 # so we can see prints in real-time and so circleci won't kill the build due to not seeing output
             pip3 install cibuildwheel==2.14.1
             cibuildwheel --prerelease-pythons --output-dir wheelhouse
           environment:
