--- a/pyproject.toml
+++ b/pyproject.toml
@@ -211,6 +211,7 @@ line-length = 88
 target-version = "py310"
 fix = true
 unfixable = []
+typing-modules = ["pandas._typing"]
 
 select = [
   # pyflakes
@@ -303,16 +304,14 @@ ignore = [
   "PLW0603",
   # Docstrings should not be included in stubs
   "PYI021",
+  # Use `typing.NamedTuple` instead of `collections.namedtuple`
+  "PYI024",
   # No builtin `eval()` allowed
   "PGH001",
   # compare-to-empty-string
   "PLC1901",
-  # Use typing_extensions.TypeAlias for type aliases
-  # "PYI026",  # not yet implemented
-  # Use "collections.abc.*" instead of "typing.*" (PEP 585 syntax)
-  # "PYI027",  # not yet implemented
   # while int | float can be shortened to float, the former is more explicit
-  # "PYI041",  # not yet implemented
+  "PYI041",
   # incorrect-dict-iterator, flags valid Series.items usage
   "PERF102",
   # try-except-in-loop, becomes useless in Python 3.11
