--- a/pyproject.toml
+++ b/pyproject.toml
@@ -501,6 +501,8 @@ filterwarnings = [
   "ignore:distutils Version classes are deprecated:DeprecationWarning:numexpr",
   "ignore:distutils Version classes are deprecated:DeprecationWarning:fastparquet",
   "ignore:distutils Version classes are deprecated:DeprecationWarning:fsspec",
+  # From numpy -> scipy -> array_api_compat doing a "from numpy import *"
+  "ignore:.*numpy.distutils:DeprecationWarning:numpy",
 ]
 junit_family = "xunit2"
 markers = [
