--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -77,16 +77,12 @@ jobs:
             env_file: actions-311-numpydev.yaml
             pattern: "not slow and not network and not single_cpu"
             test_args: "-W error::DeprecationWarning -W error::FutureWarning"
-            # TODO(cython3): Re-enable once next-beta(after beta 1) comes out
-            # There are some warnings failing the build with -werror
-            pandas_ci: "0"
           - name: "Pyarrow Nightly"
             env_file: actions-311-pyarrownightly.yaml
             pattern: "not slow and not network and not single_cpu"
       fail-fast: false
     name: ${{ matrix.name || format('ubuntu-latest {0}', matrix.env_file) }}
     env:
-      ENV_FILE: ci/deps/${{ matrix.env_file }}
       PATTERN: ${{ matrix.pattern }}
       EXTRA_APT: ${{ matrix.extra_apt || '' }}
       LANG: ${{ matrix.lang || 'C.UTF-8' }}
@@ -150,14 +146,13 @@ jobs:
 
     - name: Generate extra locales
       # These extra locales will be available for locale.setlocale() calls in tests
-      run: |
-        sudo locale-gen ${{ matrix.extra_loc }}
+      run: sudo locale-gen ${{ matrix.extra_loc }}
       if: ${{ matrix.extra_loc }}
 
     - name: Set up Conda
       uses: ./.github/actions/setup-conda
       with:
-        environment-file: ${{ env.ENV_FILE }}
+        environment-file: ci/deps/${{ matrix.env_file }}
 
     - name: Build Pandas
       id: build
@@ -316,11 +311,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO: Disable macOS for now, Github Actions bug where python is not
-        # symlinked correctly to 3.12
-        # xref https://github.com/actions/setup-python/issues/701
-        #os: [ubuntu-22.04, macOS-latest, windows-latest]
-        os: [ubuntu-22.04, windows-latest]
+        os: [ubuntu-22.04, macOS-latest, windows-latest]
 
     timeout-minutes: 180
 
@@ -342,8 +333,14 @@ jobs:
 
       - name: Set up Python Dev Version
         uses: actions/setup-python@v4
+        id: pydev
         with:
           python-version: '3.12-dev'
+
+      - name: Update Python Path
+        # xref https://github.com/actions/setup-python/issues/701
+        run: PATH=${{ steps.pydev.outputs.python-path }}:$PATH
+        if: ${{ matrix.os == 'macOS-latest'}}
 
       - name: Install dependencies
         run: |
@@ -352,15 +349,12 @@ jobs:
           python -m pip install --pre --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy
           python -m pip install versioneer[toml]
           python -m pip install python-dateutil pytz tzdata cython hypothesis>=6.46.1 pytest>=7.3.2 pytest-xdist>=2.2.0 pytest-cov pytest-asyncio>=0.17
-          python -m pip list
 
       - name: Build Pandas
-        run: |
-          python -m pip install -ve . --no-build-isolation --no-index
+        run: python -m pip install -ve . --no-build-isolation --no-index
 
       - name: Build Version
-        run: |
-          python -c "import pandas; pandas.show_versions();"
+        run: python -m pip list
 
       - name: Test
         uses: ./.github/actions/run-tests
