--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -337,24 +337,19 @@ jobs:
         with:
           python-version: '3.12-dev'
 
-      - name: Update Python Path
-        # xref https://github.com/actions/setup-python/issues/701
-        run: PATH=${{ steps.pydev.outputs.python-path }}:$PATH
-        if: ${{ matrix.os == 'macOS-latest'}}
-
-      - name: Install dependencies
+      - name: Build Environment
         run: |
+          ${{ steps.pydev.outputs.python-path }} -m venv ~/virtualenvs/pandas-dev
+          . ~/virtualenvs/pandas-dev/bin/activate
           python --version
           python -m pip install --upgrade pip setuptools wheel meson[ninja]==1.0.1 meson-python==0.13.1
           python -m pip install --pre --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy
           python -m pip install versioneer[toml]
           python -m pip install python-dateutil pytz tzdata cython hypothesis>=6.46.1 pytest>=7.3.2 pytest-xdist>=2.2.0 pytest-cov pytest-asyncio>=0.17
+          python -m pip install -ve . --no-build-isolation --no-index
+          python -m pip list
 
-      - name: Build Pandas
-        run: python -m pip install -ve . --no-build-isolation --no-index
-
-      - name: Build Version
-        run: python -m pip list
-
-      - name: Test
-        uses: ./.github/actions/run-tests
+      - name: Run Tests
+        run: |
+          . ~/virtualenvs/pandas-dev/bin/activate
+          ci/run_tests.sh
