--- a/.github/workflows/package-checks.yml
+++ b/.github/workflows/package-checks.yml
@@ -16,7 +16,7 @@ permissions:
 
 defaults:
   run:
-    shell: bash -el {0}
+    shell: bash -euo pipefail {0}
 
 jobs:
   pip:
@@ -47,7 +47,7 @@ jobs:
       - name: Pip install with extra
         run: |
           python -m pip install .[${{ matrix.extra }}] -v
-        shell: bash -el {0}
+        shell: bash -euo pipefail {0}
   conda_forge_recipe:
     if: ${{ github.event.label.name == 'Build' || contains(github.event.pull_request.labels.*.name, 'Build') || github.event_name == 'push'}}
     runs-on: ubuntu-22.04
