--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Output sdist name
         id: save-path
-        shell: bash -euo pipefail {0}
+        shell: bash -el {0}
         run: echo "sdist_name=$(ls ./dist)" >> "$GITHUB_OUTPUT"
 
   build_wheels:
@@ -123,7 +123,7 @@ jobs:
 
       - name: Output sdist name (macOS)
         id: save-path
-        shell: bash -euo pipefail {0}
+        shell: bash -el {0}
         run: echo "sdist_name=$(ls ./dist)" >> "$GITHUB_ENV"
 
       # Python version used to build sdist doesn't matter
@@ -135,7 +135,7 @@ jobs:
 
       - name: Output sdist name (macOS)
         id: save-path2
-        shell: bash -euo pipefail {0}
+        shell: bash -el {0}
         run: echo "sdist_name=$(cd ./dist && ls -d */)" >> "$GITHUB_ENV"
 
       - name: Build wheels
@@ -158,7 +158,7 @@ jobs:
           cache-environment: true
 
       - name: Validate wheel RECORD
-        shell: bash -euo pipefail {0}
+        shell: bash -el {0}
         run: for whl in $(ls wheelhouse); do wheel unpack wheelhouse/$whl -d /tmp; done
 
       # Testing on windowsservercore instead of GHA runner to fail on missing DLLs
@@ -181,7 +181,7 @@ jobs:
 
       - name: Upload wheels & sdist
         if: ${{ success() && (env.IS_SCHEDULE_DISPATCH == 'true' || env.IS_PUSH == 'true') }}
-        shell: bash -euo pipefail {0}
+        shell: bash -el {0}
         env:
           PANDAS_STAGING_UPLOAD_TOKEN: ${{ secrets.PANDAS_STAGING_UPLOAD_TOKEN }}
           PANDAS_NIGHTLY_UPLOAD_TOKEN: ${{ secrets.PANDAS_NIGHTLY_UPLOAD_TOKEN }}
