Dont use virtual env

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -336,14 +336,11 @@ jobs:
 
       - name: Set up Python Dev Version
         uses: actions/setup-python@v4
-        id: pydev
         with:
           python-version: '3.12-dev'
 
       - name: Build Environment
         run: |
-          ${{ steps.pydev.outputs.python-path }} -m venv ~/virtualenvs/pandas-dev
-          . ~/virtualenvs/pandas-dev/bin/activate
           python --version
           python -m pip install --upgrade pip setuptools wheel meson[ninja]==1.0.1 meson-python==0.13.1
           python -m pip install --pre --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy
@@ -353,6 +350,4 @@ jobs:
           python -m pip list
 
       - name: Run Tests
-        run: |
-          . ~/virtualenvs/pandas-dev/bin/activate
-          ci/run_tests.sh
+        run: ./.github/actions/run-tests
