--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -350,4 +350,4 @@ jobs:
           python -m pip list
 
       - name: Run Tests
-        run: ./.github/actions/run-tests
+        uses: ./.github/actions/run-tests
