--- a/scripts/tests/data/deps_minimum.toml
+++ b/scripts/tests/data/deps_minimum.toml
@@ -77,12 +77,11 @@ xml = ['lxml>=4.6.3']
 plot = ['matplotlib>=3.6.1']
 output_formatting = ['jinja2>=3.0.0', 'tabulate>=0.8.9']
 clipboard = ['PyQt5>=5.15.1', 'qtpy>=2.2.0']
-compression = ['brotlipy>=0.7.0', 'zstandard>=0.15.2']
+compression = ['zstandard>=0.15.2']
 all = ['beautifulsoup4>=5.9.3',
        # blosc only available on conda (https://github.com/Blosc/python-blosc/issues/297)
        #'blosc>=1.21.0',
        'bottleneck>=1.3.2',
-       'brotlipy>=0.7.0',
        'fastparquet>=0.6.3',
        'fsspec>=2021.07.0',
        'gcsfs>=2021.07.0',
