--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -46,6 +46,7 @@ jobs:
       IS_SCHEDULE_DISPATCH: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
     outputs:
       sdist_file: ${{ steps.save-path.outputs.sdist_name }}
+      pandas_tests_loc: ${{ steps.save-tests-path.outputs.pandas_tests_loc }}
     steps:
       - name: Checkout pandas
         uses: actions/checkout@v3
@@ -62,19 +63,29 @@ jobs:
           python -m pip install build
           python -m build --sdist
 
+      - name: Build pandas_tests
+        run: |
+          cd pandas
+          python -m build --wheel
+
       - uses: actions/upload-artifact@v3
         with:
-          name: sdist
+          name: sdist-and-tests
           path: ./dist/*
 
-      - name: Sanity check sdist files
+      - name: Sanity check built files
         run: |
           ls ./dist
 
       - name: Output sdist name
         id: save-path
         shell: bash -el {0}
-        run: echo "sdist_name=$(ls ./dist)" >> "$GITHUB_OUTPUT"
+        run: echo "sdist_name=$(ls ./dist/*.tar.gz)" >> "$GITHUB_OUTPUT"
+
+      - name: Output pandas_tests location
+        id: save-tests-path
+        shell: bash -el {0}
+        run: echo "pandas_tests_loc=$(ls ./dist/*.whl)" >> "$GITHUB_OUTPUT"
 
   build_wheels:
     needs: build_sdist
@@ -114,26 +125,20 @@ jobs:
 
       # We need to build wheels from the sdist since the sdist
       # removes unnecessary files from the release
-      - name: Download sdist (not macOS)
-        #if: ${{ matrix.buildplat[1] != 'macosx_*' }}
+      - name: Download sdist and pandas_tests
         uses: actions/download-artifact@v3
         with:
-          name: sdist
+          name: sdist-and-tests
           path: ./dist
 
-      - name: Output sdist name (macOS)
-        id: save-path
-        shell: bash -el {0}
-        run: echo "sdist_name=$(ls ./dist)" >> "$GITHUB_ENV"
-
-      # Python version used to build sdist doesn't matter
-      # wheel will be built from sdist with the correct version
+      # The sdist will be corrupted by cibuildwheel/macOS sometimes somehow
+      # (I think this is a Github Actions bug)
       - name: Unzip sdist (macOS)
         if: ${{ matrix.buildplat[1] == 'macosx_*' }}
         run: |
           tar -xzf ./dist/${{ env.sdist_name }} -C ./dist
 
-      - name: Output sdist name (macOS)
+      - name: Output new sdist name (macOS)
         id: save-path2
         shell: bash -el {0}
         run: echo "sdist_name=$(cd ./dist && ls -d */)" >> "$GITHUB_ENV"
@@ -145,6 +150,7 @@ jobs:
         env:
           CIBW_PRERELEASE_PYTHONS: True
           CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
+          PANDAS_TESTS_LOC: ${{ needs.build_sdist.outputs.pandas_tests_loc }}
 
       - name: Set up Python
         uses: mamba-org/setup-micromamba@v1
