--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -138,7 +138,7 @@ jobs:
       - name: Unzip sdist (macOS)
         if: ${{ matrix.buildplat[1] == 'macosx_*' }}
         run: |
-          tar -xzf ./dist/${{ env.sdist_name }} -C ./dist
+          tar -xzf ${{ needs.build_sdist.outputs.sdist_file }} -C ./dist
 
       - name: Output new sdist name (macOS)
         id: save-path2
@@ -153,7 +153,7 @@ jobs:
         env:
           CIBW_PRERELEASE_PYTHONS: True
           CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
-          PANDAS_TESTS_LOC: ${{ needs.build_sdist.outputs.pandas_tests_loc }}
+          CIBW_ENVIRONMENT: PANDAS_TESTS_LOC=${{ needs.build_sdist.outputs.pandas_tests_loc }}
 
       - name: Set up Python
         uses: mamba-org/setup-micromamba@v1
