--- a/ci/deps/actions-311-numpydev.yaml
+++ b/ci/deps/actions-311-numpydev.yaml
@@ -25,7 +25,7 @@ dependencies:
   - pip
 
   - pip:
-    - "cython<=3.0.1"
+    - "cython<3.0.1"
     - "--extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple"
     - "--pre"
     - "numpy"
