--- a/environment.yml
+++ b/environment.yml
@@ -113,8 +113,8 @@ dependencies:
   - pygments # Code highlighting
 
   - pip:
-      - adbc_driver_postgresql
-      - adbc_driver_sqlite
+      - adbc_driver_postgresql>=0.6.0
+      - adbc_driver_sqlite>=0.6.0
       - dataframe-api-compat>=0.1.7
       - sphinx-toggleprompt  # conda-forge version has stricter pins on jinja2
       - typing_extensions; python_version<"3.11"
