--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -82,8 +82,8 @@ feedparser
 pyyaml
 requests
 pygments
-adbc_driver_postgresql
-adbc_driver_sqlite
+adbc_driver_postgresql>=0.6.0
+adbc_driver_sqlite>=0.6.0
 dataframe-api-compat>=0.1.7
 sphinx-toggleprompt
 typing_extensions; python_version<"3.11"
